// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Path > behaviour > draws path with mousemove 1`] = `
<body>
  <div>
    <path
      class="shape"
      d="M 100 100 L 150 150 L 100 100"
      stroke-width="16"
    />
    <rect
      class="hitbox"
      height="52"
      width="52"
      x="74"
      y="74"
    />
    <rect
      class="bounding"
      height="20"
      width="20"
      x="90"
      y="90"
    />
    
    
    
    
  </div>
</body>
`;

exports[`Path > rendering > renders with given drawingGeometry 1`] = `
<body>
  <div>
    <path
      class="shape too-small"
      d="M 100 100"
    />
    <rect
      class="hitbox"
      height="NaN"
      width="NaN"
      x="NaN"
      y="NaN"
    />
    <rect
      class="bounding"
      height="NaN"
      width="NaN"
      x="NaN"
      y="NaN"
    />
    
    
    
    
  </div>
</body>
`;

exports[`Path > rendering > renders with the given geometry 1`] = `
<body>
  <div>
    <path
      class="shape"
      d="M 20 20 L 100 100 L 60 70 L 80 90"
      stroke-width="16"
    />
    <rect
      class="hitbox"
      height="148"
      width="148"
      x="-14"
      y="-14"
    />
    <rect
      class="bounding"
      height="116"
      width="116"
      x="2"
      y="2"
    />
    
    
    
    
  </div>
</body>
`;

exports[`Path > rendering > renders with the given key and selected state 1`] = `
<body>
  <div>
    <path
      class="shape"
      d="M 20 20 L 100 100 L 60 70 L 80 90"
      stroke-width="16"
    />
    <rect
      class="hitbox"
      height="148"
      width="148"
      x="-14"
      y="-14"
    />
    <rect
      class="bounding"
      height="116"
      width="116"
      x="2"
      y="2"
    />
    
    <g
      class="resize-hitbox-container"
    >
      <rect
        class="resize-square"
        height="10"
        width="10"
        x="113"
        y="113"
      />
      <rect
        class="resize-hitbox"
        height="88"
        width="88"
        x="74"
        y="74"
      />
    </g>
    
    
    
  </div>
</body>
`;
